--- a/src/app/components/auth/signin/signin.component.html
+++ b/src/app/components/auth/signin/signin.component.html
@@ -43,7 +43,8 @@
       
       
         </div>
-        <button class="text-white bg-indigo-500 border-0 py-2 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg">Button</button>
+        <button class="text-white bg-indigo-500 border-0 py-2 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg">Ingresar</button>
+        <button class="text-white bg-indigo-500 border-0 py-2 px-8 mt-6 focus:outline-none hover:bg-indigo-600 rounded text-lg" (click)="loginGoogle()">Ingresar con Google</button>
         <p class="text-xs text-gray-500 mt-3">Literally you probably haven't heard of them jean shorts.</p>
     
     </form>
