--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -10,7 +10,7 @@
     
       <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
 
-        <a class="mr-5 hover:text-gray-900">Second Link</a>
+        <button class="mr-5 hover:text-gray-900" (click)="logOut()">Salir</button>
         <a class="mr-5 hover:text-gray-900" routerLink="/signin">Iniciar Sesion</a>
         <a class="mr-5 hover:text-gray-900" routerLink="/signup">Registrarse</a>
       </nav>
